# ChangeLog for app-accessibility/brltty
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.40 2006/01/26 05:05:38 williamh Exp $

*brltty-3.7.2 (26 Jan 2006)

  26 Jan 2006; William Hubbs <williamh@gentoo.org> metadata.xml,
  +brltty-3.7.2.ebuild:
  Version bump.
  this version has been ported to modular X, thanks to
  Donnie Berkholz <spyderous@gentoo.org>.
  Also, it now installs the documentation, and optionally with the
  'doc' use flag, the API documentation.

  19 Nov 2005; Chris White <chriswhite@gentoo.org> ChangeLog:
  repoman commiting this to verify manifest doesn't go weird.

  10 Oct 2005; Chris White <chriswhite@gentoo.org> metadata.xml:
  Initial longdescription.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> brltty-3.6.1-r1.ebuild:
  stable on ia64

  13 Jul 2005; Stephen P. Becker <geoman@gentoo.org> brltty-3.5.ebuild,
  brltty-3.6.ebuild, brltty-3.6.1-r1.ebuild:
  removing mips keywords, as accessibility is masked for us, and I can not
  test this

*brltty-3.6.1-r1 (03 Jul 2005)

  03 Jul 2005; <plasmaroo@gentoo.org> +brltty-3.6.1-r1.ebuild,
  -brltty-3.6.1.ebuild:
  Bump for #85373.

  03 Jul 2005; <plasmaroo@gentoo.org> brltty-3.6.1.ebuild:
  Fix #85373. This is boot critical so we do need to be in /bin, not /usr/bin.

  02 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> brltty-3.6.1.ebuild:
  Stable on alpha.

  12 Jun 2005; Olivier Crête <tester@gentoo.org> brltty-3.6.1.ebuild:
  Stable on amd64

  09 Jun 2005; Markus Rothe <corsair@gentoo.org> brltty-3.6.1.ebuild:
  Stable on ppc64

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> brltty-3.6.1.ebuild:
  Stable on ppc.

  19 May 2005; Guy Martin <gmsoft@gentoo.org> brltty-3.6.1.ebuild:
  Stable on hppa.

  16 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> brltty-3.6.1.ebuild:
  Stable on sparc

  16 May 2004; Leonardo Boshell <leonardop@gentoo.org> brltty-3.6.1.ebuild:
  Stable on x86.
