@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/Attic/brltty-3.6.1-r1.ebuild,v 1.3 2005/08/23 02:06:31 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/Attic/brltty-3.6.1-r1.ebuild,v 1.4 2006/02/02 02:08:14 williamh Exp $
 
 MY_P=${P/_/}
 S=${WORKDIR}/${MY_P}
@@ -14,9 +14,11 @@ SLOT="0"
 KEYWORDS="alpha amd64 hppa ia64 ppc ppc64 sparc x86"
 IUSE="gpm X usb"
 
-DEPEND="virtual/libc
+RDEPEND="virtual/libc
 	gpm? ( >=sys-libs/gpm-1.20 )
-	X? ( virtual/x11 )"
+	X? ( || ( x11-libs/libXaw virtual/x11 ) )"
+DEPEND="${RDEPEND}
+	X? ( || ( x11-proto/xextproto virtual/x11 ) )"
 
 src_compile() {
 	econf `use_enable gpm` \
