@@ -1,6 +1,13 @@
 # ChangeLog for app-accessibility/brltty
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.40 2006/01/26 05:05:38 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.41 2006/02/02 02:08:14 williamh Exp $
+
+  02 Feb 2006; William Hubbs <williamh@gentoo.org> brltty-3.6.ebuild,
+  brltty-3.6.1-r1.ebuild:
+  Ported to modular X.
+
+  02 Feb 2006; William Hubbs <williamh@gentoo.org> brltty-3.6.1-r1.ebuild:
+  Ported to modular X.
 
 *brltty-3.7.2 (26 Jan 2006)
 
